# ML_pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  xg_config.json
.dvc/: config
DOCO/: Fase1_AnalisisDeRequerimientos (1).docx  Fase1_Equipo13_Presentacion.pptx
cookie-step/: README.md  cookiecutter.json
cookie-step/{{cookiecutter.step_name}}/: MLproject  conda.yml  {{cookiecutter.script_name}}
data/raw/: student_entry_performance_modified.csv.dvc
multirun/2025-10-12/18-52-16/: optimization_results.yaml
outputs/2025-10-10/: Fase2_Presentacion_Equipo13.pptx
outputs/2025-10-10/20-29-37/.hydra/: config.yaml  hydra.yaml
src/clean_data/: 1_Manipulacion_y_Preparacion_de_Datos.ipynb  MLproject  clean_data_for_test.py  conda.yml  run.py
src/eda/: 1_EDA.ipynb  EDA.ipynb  MLproject  conda.yml
src/load_data/: MLproject  conda.yml  load_data_for_test.py  run.py
src/test_model/: MLproject  Modelado y entrenamiento.ipynb  conda.yml  evaluate_model_for_test.py  run.py
src/train_model/: MLproject  conda.yml  feature_engineering_pipeline.py  run.py  train_model_for_test.py  train_results.json
src/train_model/xgboost_dir/: MLmodel  conda.yaml  python_env.yaml
src/train_test_split_data/: MLproject  conda.yml  run.py  train_test_split_data_for_test.py
src/train_val_test_split_data/: MLproject  conda.yml  run.py
tests/: test_clean_data.py  test_evaluate_model.py  test_load_data.py  test_train_model.py  test_train_test_split_data.py
tests/integration/: test_pipeline.py
(+68 files in other folders)
