[tool.poetry]
name = "ml-pipeline"
version = "0.1.0"
description = "ML pipeline basado en MLflow"
authors = ["Luis Barranco <xiuh.estebarra@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.10.0"
wandb = "^0.16.3"
hydra-core = "^1.3.2"
hydra-optuna-sweeper = "^1.2.0"
omegaconf = "^2.3.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3" 

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.2.0"
ipython = "^8.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"